--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -102,7 +102,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=hummon.Hummon
+main.class=org.nlogo.extensions.hummon.deleteme
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
