--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Hummon
 application.vendor=ogabbrie
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -43,6 +44,7 @@ file.reference.jung-jai-samples-2.0.1.jar=lib/jung-jai-samples-2.0.1.jar
 file.reference.jung-samples-2.0.1.jar=lib/jung-samples-2.0.1.jar
 file.reference.jung-visualization-2.0.1.jar=lib/jung-visualization-2.0.1.jar
 file.reference.NetLogo.jar=../../../../Applications/NetLogo 5.0/NetLogo.jar
+file.reference.NetLogo.jar-1=lib/NetLogo.jar
 file.reference.stax-api-1.0.1.jar=lib/stax-api-1.0.1.jar
 file.reference.vecmath-1.3.1.jar=lib/vecmath-1.3.1.jar
 file.reference.wstx-asl-3.2.6.jar=lib/wstx-asl-3.2.6.jar
@@ -69,7 +71,8 @@ javac.classpath=\
     ${file.reference.jung-visualization-2.0.1.jar}:\
     ${file.reference.stax-api-1.0.1.jar}:\
     ${file.reference.vecmath-1.3.1.jar}:\
-    ${file.reference.wstx-asl-3.2.6.jar}
+    ${file.reference.wstx-asl-3.2.6.jar}:\
+    ${file.reference.NetLogo.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,9 +106,13 @@ jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
 main.class=org.nlogo.extensions.hummon.deleteme
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
